--- a/TorontoNeighborhoodData.ipynb
+++ b/TorontoNeighborhoodData.ipynb
@@ -623,25 +623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://api.foursquare.com/v2/venues/explore?client_id=W02GLHQCAYNTW4FFRCROILCNH5DPQPBQOT2RFBQCX4GNLERQ&client_secret=T5NZATV1DSRDNOTCQPVJTMVN5SWZRZHB4KE4MFW0PZMFPJRZ&ll=43.6534817,-79.3839347&oauth_token=TTU5B5RAIMXLGMKTTL0YW2K0QBJJLKYYP2MMP0JQ3QCCGV3Y&v=20180605&radius=500&limit=100'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "url = 'https://api.foursquare.com/v2/venues/explore?client_id={}&client_secret={}&ll={},{}&oauth_token={}&v={}&radius={}&limit={}'.format(CLIENT_ID, CLIENT_SECRET, latitude, longitude,ACCESS_TOKEN, VERSION, 500, 100)\n",
-    "url"
+    "url = 'https://api.foursquare.com/v2/venues/explore?client_id={}&client_secret={}&ll={},{}&oauth_token={}&v={}&radius={}&limit={}'.format(CLIENT_ID, CLIENT_SECRET, latitude, longitude,ACCESS_TOKEN, VERSION, 500, 100)"
    ]
   },
   {
